# rotating-coil-analyzer

./: .gitattributes  .gitignore  CLEANUP.md  README.md  create_sps_mbb_comparison_presentation.py  kn_identity_20.txt  kn_main_phase_pi4_20.txt  pyproject.toml  test.csv  tmp_time_alignment.py
.claude/: settings.local.json
docs/: analysis_pipeline.md  cleanup_report.md  golden_standard_parity_report.md
rotating_coil_analyzer/: __init__.py
rotating_coil_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
rotating_coil_analyzer/analysis/: __init__.py  fourier.py  kn_bundle.py  kn_head.py  kn_pipeline.py  merge.py  preprocess.bak  preprocess.py  turns.py  utility_functions.py
rotating_coil_analyzer/gui/: __init__.py  app.py  coil_calibration.py  harmonic_merge.py  harmonics.py  log_view.py  phase2.py  phase3_kn.py  phase3a_coil_calibration.py  phase3b_harmonic_merge.py  phase4_plots.py
rotating_coil_analyzer/ingest/: __init__.py  channel_detect.py  discovery.py  readers_mba.py  readers_plateau.py  readers_sm18.py  readers_streaming.py
rotating_coil_analyzer/models/: __init__.py  catalog.py  frames.py  profile.py  results.py
rotating_coil_analyzer/notebooks/: 01_catalog_browser.ipynb  02-FFT_test.ipynb  02_phase2_gui.ipynb  03_kn_from_mh_csv.ipynb  Kn_values_computed.txt  analysis_20260206_142231_SPS_MBB_NCS.ipynb  analysis_20260206_144537_SPS_MBB_NCS_supercycle.ipynb  analysis_20260211_104646_LEAR_MC62_00_test.ipynb  analysis_20260211_114759_LEAR_MC62_01_staircase_with_shims.ipynb  b3_analysis_LIU_BTP8.ipynb  golden_standard_parity.ipynb  (+14 more)
(+41 files in other folders)
