[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rotating-coil-analyzer"
version = "0.1.0"
description = "Python analyzer for rotating-coil magnetic measurements (FFMM-compatible)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "matplotlib>=3.7",
  "ipywidgets>=8.0",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["rotating_coil_analyzer*"]
